dhw-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
    - host: app.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: dhw-service
                port:
                  number: 80
